[project]
name = "DDT"
version = "0.1.0"
description = "This project means to explore the possibilities of Denoising Distillation of Text"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hf-xet>=1.0.3",
    "huggingface-hub>=0.30.2",
    "ipykernel>=6.29.5",
    "lightning>=2.5.1",
    "torch>=2.6.0",
    "torcheval>=0.0.7",
    "transformers>=4.51.1",
]

[dependency-groups]
dev = [
    "ruff>=0.11.3",
]
